--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App{
   width: 100%;
-  min-height: 100vh;
-  border: 1px solid #666;
+  min-height: 100%;
   margin: 0 auto;
   position: relative;
+  overflow-x: hidden;
 }
