--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,11 @@
   margin: 0 auto;
   position: relative;
   overflow-x: hidden;
+  background-color: rgb(228, 228, 228);
+  transition: all 0.3s ease-in-out;
+}
+
+.body-darkmode{
+  transition: all 0.3s ease-in-out;
+  background-color: rgb(36, 36, 52) !important;
 }
