--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -11,6 +11,13 @@
     text-align: center;
     font-size: 20px;
     margin: 2rem 0;
+    color: black;
+    transition: all 0.3s ease-in-out;
+}
+
+.contact-container__header-darkmode{
+    color: rgb(235, 235, 235) !important;
+    transition: all 0.3s ease-in-out;
 }
 
 .contact-container__content{
